Archive2/3a/7223b0b891f1ff/output
main.cpp: In function 'int main()':
main.cpp:7:26: error: 'literals' is not a namespace-name
     using namespace std::literals;
                          ^
main.cpp:7:34: error: expected namespace-name before ';' token
     using namespace std::literals;
                                  ^
main.cpp:10:33: error: unable to find numeric literal operator 'operator"" s'
     std::this_thread::sleep_for(2s);
                                 ^
